Teleport player after mid point.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,6 +34,21 @@
             "name": "Android Player",
             "type": "unity",
             "request": "launch"
+        },
+        {
+            "name": "Xbox One Player",
+            "type": "unity",
+            "request": "launch"
+        },
+        {
+            "name": "PS4 Player",
+            "type": "unity",
+            "request": "launch"
+        },
+        {
+            "name": "SwitchPlayer",
+            "type": "unity",
+            "request": "launch"
         }
     ]
 }
